--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -17,8 +22,17 @@ buildscript {
 
 allprojects {
     repositories {
+        //mavenCentral()
+
+
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
+
     }
 }
 
