--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
@@ -28,12 +32,38 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-
     implementation 'ja.burhanrashid52:photoeditor:0.3.3'
 
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    //This library allows you to create a random collage of cards.
+    //implementation 'com.jcmore2.collage:collage:1.0.0'
 
-    implementation 'com.jcmore2.collage:collage:1.0.0'
+
+    //Responsive Ui dependency
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+
+    implementation 'com.mostafagazar:customshapeimageview:1.0.4'
+
+    //implementation 'com.github.florent37:shapeofview:1.3.2'
+
+    implementation 'com.caverock:androidsvg-aar:1.3'
+
+    //implementation 'com.github.japgolly.android:svg-android:2.0.6'
+
+    //implementation 'jp.wasabeef:glide-transformations:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //filter library
+    implementation 'com.github.zomato:androidphotofilters:1.0.2'
+    implementation 'com.nineoldandroids:library:2.4.0+'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
 }
