--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.mojodigi.selfiepro"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +21,7 @@ android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+
 }
 
 dependencies {
@@ -32,38 +34,53 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'ja.burhanrashid52:photoeditor:0.3.3'
-
+    // implementation 'ja.burhanrashid52:photoeditor:0.3.3'
+    implementation project(':photoeditor')
     implementation 'com.android.support:cardview-v7:28.0.0'
-
-    //This library allows you to create a random collage of cards.
-    //implementation 'com.jcmore2.collage:collage:1.0.0'
-
 
     //Responsive Ui dependency
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-
-    //implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-
     implementation 'com.mostafagazar:customshapeimageview:1.0.4'
-
-    //implementation 'com.github.florent37:shapeofview:1.3.2'
 
     implementation 'com.caverock:androidsvg-aar:1.3'
 
-    //implementation 'com.github.japgolly.android:svg-android:2.0.6'
-
-    //implementation 'jp.wasabeef:glide-transformations:4.9.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-    //filter library
-    implementation 'com.github.zomato:androidphotofilters:1.0.2'
-    implementation 'com.nineoldandroids:library:2.4.0+'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.yalantis:ucrop:2.2.2'
 
+// Filters dependency
+    implementation 'info.androidhive:imagefilters:1.0.7'
+
+// dexter M permissions
+    implementation 'com.karumi:dexter:4.1.0'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
+
+
+    //Fb dependency
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.facebook.android:audience-network-sdk:5.4.1'
+
+    // fireabse analytics
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+
+    // firebase push notifications
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+    // fireabse Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+
+    // Appmetrica SDK dependency .
+    implementation 'com.yandex.android:mobmetricalib:3.5.3'
+
+    // Optionally. Play Install Referrer library.
+    implementation 'com.android.installreferrer:installreferrer:1.0'
+    // Appmetrica SDK dependency .
 
 }
+
+
+apply plugin: 'com.google.gms.google-services'
