--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
 // dexter M permissions
     implementation 'com.karumi:dexter:4.1.0'
 
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
 
     //Fb dependency
@@ -80,6 +80,8 @@ dependencies {
     implementation 'com.android.installreferrer:installreferrer:1.0'
     // Appmetrica SDK dependency .
 
+
+    implementation 'net.alhazmy13.ImageFilters:library:0.1.2-beta'
 }
 
 
